# isidor

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.status  configure  configure.ac  flake.nix
src/: Makefile  Makefile.am  Makefile.in  datadir.cpp  datadir.hpp  iostile_layer.hxx  isidor_main.cpp  isidor_main.cxx  isidor_main.hpp  isidor_main.hxx  isotile_layer.cpp  isotile_layer.cxx  isotile_layer.hxx  isowall_layer.cpp  isowall_layer.cxx  isowall_layer.hxx
